[project]
name = "nonebot-plugin-random-stereotypes"
description = "基于Nonebot2的发病语录插件"
dynamic = ["version"]
authors = [{ name = "Ikaros", email = "327209194@qq.com" }]
requires-python = "<4.0,>=3.9"
dependencies = [
    "nonebot2>=2.3.3",
    "nonebot-plugin-alconna>=0.52.1",
    "nonebot-plugin-userinfo>=0.2.5",
    "nonebot-plugin-waiter>=0.7.1",
    "cookit>=0.8.0",
]
license = { text = "MIT" }
readme = "README.md"

[project.urls]
homepage = "https://github.com/Ikaros-521/nonebot_plugin_random_stereotypes"
repository = "https://github.com/Ikaros-521/nonebot_plugin_random_stereotypes"
documentation = "https://github.com/Ikaros-521/nonebot_plugin_random_stereotypes/blob/master/README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["nonebot_plugin_random_stereotypes"]

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_random_stereotypes/__init__.py"
